--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   font-family: sans-serif;
   color: white;
-  background-color: #282c34;
+  background-color: #242a36;
+  font-size: 16px;
 }
 
 .App {
@@ -14,4 +15,8 @@ body {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+}
+
+button:hover {
+  cursor: pointer;
 }
